prevent footer to overlap other components

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'ngx-toastr/toastr';
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 app-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+    margin-top: auto;
 }
